--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,3 +1,8 @@
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 1em;
+  line-height: 1.2;
+}
 .broken {
   border: 2px solid red;
   border-radius: 3px;
@@ -5,4 +10,21 @@
 
 li {
   padding: 10px;
+}
+label {
+  display: block;
+  clear: both;
+}
+p {
+  font-style: italic;
+}
+input {
+  line-height: 1.5;
+  padding: 0.5em;
+  border-radius: 3px;
+  border: 1px solid #4d4d4d;
+  min-width: 200px;
+}
+textarea {
+  min-width: 200px;
 }
