adding a native event

--- a/app/components/native-events.hbs
+++ b/app/components/native-events.hbs
@@ -1,1 +1,9 @@
 <h1>Using native events with the on helper</h1>
+
+<p>Syntax: <code>&lt;Input &#123;&#123;on "event" this.someAction&#125;&#125; /&gt;</code></p>
+<ol>
+  <li>
+    <label for="keyup">Event is keyup</label>
+    <Input {{on "keyup" this.updateName}} id="keyup"/>
+  </li>
+</ol>
