updated native events example

--- a/app/components/input-arguments.hbs
+++ b/app/components/input-arguments.hbs
@@ -9,7 +9,7 @@
 
 <ol>
   <li class="broken">
-    <label for="enter">@enter (doesn't work)</label>
+    <label for="enter">@enter</label>
     <Input @enter={{this.updateName}} id="enter"/>
     
   </li>
@@ -23,7 +23,7 @@
     <Textarea @insertNewline={{this.updateName}} id="insert-newline-textarea" />
   </li>
   <li class="broken">
-    <label for="escape-press">@escapePress (doesn't work)</label>
+    <label for="escape-press">@escapePress</label>
     <Input @escapePress={{this.updateName}} id="escape-press"/>
   </li>
   <li>
