--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,14 +1,3 @@
-<h1>Input events in Ember</h1>
-<p>This app shows various syntaxes for input events, including working and non-working examples.</p>
-<ul>
-  <li><LinkTo @route="input-arguments">"Special actions passed into Input"</LinkTo></li> 
-  <li><LinkTo @route="native-events">"Using native events with the on helper"</LinkTo></li>
-  <li><LinkTo @route="other-debugging">"Big list of generic testing"</LinkTo></li> 
-</ul>
 
-<h2>Resources</h2>
-<ul>
-  <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input">MDN</a></li>
-  <li><a href="https://guides.emberjs.com/release/components/built-in-components/#toc_input">Ember Guides</a></li>
-  <li><a href="https://api.emberjs.com/ember/release/classes/Ember.Templates.components/methods/Input?anchor=Input">API docs</a></li>
-</ul>
+<Main />
+
