--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -56,10 +56,20 @@ nav > ul > li > a {
   padding: 1em;
   border-right: 1px solid black;
 }
+h3 + ol {
+ padding-top: 0; 
+ margin-top: 0;
+ margin-bottom: 2em;
+}
 main {
-  padding: 1em;
+  padding: 0 1em 1em;
 }
 footer {
   border-top: 1px solid black;
   width: 100%;
+}
+.intro {
+  font-size: 1.25em;
+  font-style: normal;
+  letter-spacing: normal;
 }
